// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: StartReissueButton 1`] = `
<styled.button
  onClick={[Function]}
>
  <styled.p>
    利用できないキャッシュカードの再発行
  </styled.p>
  <styled.p>
    磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行
  </styled.p>
</styled.button>
`;

exports[`should match snapshot: StartReissueButton/Container 1`] = `
.c0 {
  border: solid 1px #eee;
  box-shadow: 2px 2px 2px #bdbdbd;
  width: 300px;
  display: inline-block;
}

.c0:active {
  opacity: 0.5;
  box-shadow: 2px 2px 2px #f5f5f5;
}

<button
  className="c0"
  onClick={[Function]}
/>
`;

exports[`should match snapshot: StartReissueButton/Description 1`] = `
.c0 {
  color: #212121;
  font-size: 12px;
  padding: 10px;
  text-align: left;
}

<p
  className="c0"
>
  説明
</p>
`;

exports[`should match snapshot: StartReissueButton/Title 1`] = `
.c0 {
  color: #212121;
  font-size: 14px;
  font-weight: bold;
  background-color: #eee;
  padding: 10px;
  text-align: left;
}

<p
  className="c0"
>
  タイトル
</p>
`;
